--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,7 +6,10 @@
 <div>
   <div>
     {% for room in rooms %}
+    <span>@{{room.host.username}}</span>
     <p>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></p>
+    <small>{{room.topic.name}}</small>
+    <hr>
     {% endfor %}
   </div>
 </div>
