--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,6 +5,7 @@
   <a href="{% url 'create-room' %}">+ Create Room</a>
   <div>
     {% for room in rooms %}
+    <a href="{% url 'update-room' room.id %}">Edit</a>
     <span>@{{room.host.username}}</span>
     <p>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></p>
     <small>{{room.topic.name}}</small>
