--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,6 +6,7 @@
   <div>
     {% for room in rooms %}
     <a href="{% url 'update-room' room.id %}">Edit</a>
+    <a href="{% url 'delete-room' room.id %}">Delete</a>
     <span>@{{room.host.username}}</span>
     <p>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></p>
     <small>{{room.topic.name}}</small>
