--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,17 +1,40 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<div>
-  <a href="{% url 'create-room' %}">+ Create Room</a>
+<style>
+  .home-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+</style>
+
+<div class="home-container">
+
   <div>
-    {% for room in rooms %}
-    <a href="{% url 'update-room' room.id %}">Edit</a>
-    <a href="{% url 'delete-room' room.id %}">Delete</a>
-    <span>@{{room.host.username}}</span>
-    <p>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></p>
-    <small>{{room.topic.name}}</small>
+    <h3>Browse Topics</h3>
     <hr>
+    <div>
+      <a href="{% url 'home' %}">All</a>
+    </div>
+    {% for topic in topics %}
+    <div>
+      <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+    </div>
     {% endfor %}
+  </div>
+
+  <div>
+    <a href="{% url 'create-room' %}">+ Create Room</a>
+    <div>
+      {% for room in rooms %}
+      <a href="{% url 'update-room' room.id %}">Edit</a>
+      <a href="{% url 'delete-room' room.id %}">Delete</a>
+      <span>@{{room.host.username}}</span>
+      <p>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></p>
+      <small>{{room.topic.name}}</small>
+      <hr>
+      {% endfor %}
+    </div>
   </div>
 </div>
 {% endblock %}
