--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -24,6 +24,8 @@
   </div>
 
   <div>
+    <h3>Study Rooms</h3>
+    <h5>{{rooms.count}} rooms available</h5>
     <a href="{% url 'create-room' %}">+ Create Room</a>
     <div>
       {% for room in rooms %}
