--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,4 +2,9 @@
   <h1>LOGO</h1>
 </a>
 
+<form action="{% url 'home' %}" method="GET">
+  <input type="text" name="q" placeholder="Search...">
+  <button type="submit">Search</button>
+</form>
+
 <hr>
