--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -10,7 +10,7 @@
     <input type="text" id="username" name="username" placeholder="Username">
 
     <label for="password">Password : </label>
-    <input type="text" id="password" name="password" placeholder="Password">
+    <input type="password" id="password" name="password" placeholder="Password">
 
     <button type="submit">Login</button>
   </form>
