--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}
-
+{% if page == 'login' %}
 <div>
   <form action="" method="POST">
     {% csrf_token %}
@@ -14,6 +14,23 @@
 
     <button type="submit">Login</button>
   </form>
+
+  <p>Haven't signed up yet?</p>
+  <a href="{% url 'register' %}">Register</a>
 </div>
+{% else %}
+<div>
+  <form action="" method="POST">
+    {% csrf_token %}
+
+    {{form.as_p}}
+
+    <button type="submit">Register</button>
+  </form>
+
+  <p>Haven't signed in yet?</p>
+  <a href="{% url 'login' %}">Login</a>
+</div>
+{% endif %}
 
 {% endblock %}
