--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -2,4 +2,18 @@
 
 {% block content %}
 <h1>{{room.name}}</h1>
+
+<p>{{room.description}}</p>
+
+<div class="comment-wrapper">
+  <h3>Conversations</h3>
+  <hr>
+  {% for message in room_messages %}
+  <div>
+    <small>{{message.user}}  {{message.created|timesince}} ago</small>
+    <p>{{message.body}}</p>
+    <hr>
+  </div>
+  {% endfor %}
+</div>
 {% endblock %}
