add create message function

--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -16,4 +16,14 @@
   </div>
   {% endfor %}
 </div>
+
+{% if request.user.is_authenticated %}
+<div class="comment-form">
+  <form action="" method="POST">
+    {% csrf_token %}
+    <input type="text" name="body" placeholder="Write your message here...">
+    <button type="submit">Send</button>
+  </form>
+</div>
+{% endif %}
 {% endblock %}
