--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -3,7 +3,7 @@
 <a href="{% url 'update-room' room.id %}">Edit</a>
 <a href="{% url 'delete-room' room.id %}">Delete</a>
 {% endif %}
-<span>@{{room.host.username}}</span>
+ <a href="{% url 'user-profile' room.host.id %}"><span>@{{room.host.username}}</span></a>
 <p>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></p>
 <small>{{room.topic.name}}</small>
 <hr>
