--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,19 +1,39 @@
-<a href="/">
-  <h1>LOGO</h1>
-</a>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">StudyBuddy</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-<form action="{% url 'home' %}" method="GET">
-  <input type="text" name="q" placeholder="Search...">
-  <button type="submit">Search</button>
-</form>
+        <li class="nav-item dropdown">
+          {% if request.user.is_authenticated %}
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Hello! {{request.user}}
+          </a>
+          {% else %}
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            User
+          </a>
+          {% endif %}
+          <ul class="dropdown-menu">
+            {% if request.user.is_authenticated %}
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+            <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+            {% endif %}
 
-{% if request.user.is_authenticated %}
-<p>Hello {{request.user}}</p>
-<a href="{% url 'logout' %}">Logout</a>
-
-{% else %}
-
-<a href="{% url 'login' %}">Login</a>
-{% endif %}
-
-<hr>
+          </ul>
+        </li>
+      </ul>
+      <form action="{% url 'home' %}" method="GET" class="d-flex" role="search">
+        <input type="text" class="form-control me-2" name="q" placeholder="Search..." aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
