--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,6 +30,7 @@
           </ul>
         </li>
       </ul>
+      <a class="btn btn-primary" href="{% url 'create-room' %}">+ Create Room</a>
       <form action="{% url 'home' %}" method="GET" class="d-flex" role="search">
         <input type="text" class="form-control me-2" name="q" placeholder="Search..." aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
