--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -1,13 +1,19 @@
 <h3>Recent Activity</h3>
 <hr>
+
 {% for message in room_messages %}
-<div>
-  <small><a href="{% url 'user-profile' message.user.id %}">@{{message.user}}</a> {{message.created|timesince}}</small>
-  <small>Replied to "{{message.room}}"</small>
-  <p>{{message}}</p>
-  {% if request.user == message.user %}
-  <a href="{% url 'delete-message' message.id %}">Delete</a>
-  <hr>
-  {% endif %}
+<div class="d-flex justify-content-between">
+  <div>
+      <small><a href="{% url 'user-profile' message.user.id %}">@{{message.user}}</a> {{message.created|timesince}} ago</small>
+      <br>
+      <small>Replied to "{{message.room}}"</small>
+      <p class="fs-5">{{message}}</p>
+  </div>
+  <div>
+    {% if request.user == message.user %}
+    <a href="{% url 'delete-message' message.id %}">Delete</a>
+    {% endif %}
+  </div>
 </div>
-{% endfor %}
+<hr>
+  {% endfor %}
