--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -1,10 +1,17 @@
 {% for room in rooms %}
-{% if request.user == room.host %}
-<a href="{% url 'update-room' room.id %}">Edit</a>
-<a href="{% url 'delete-room' room.id %}">Delete</a>
-{% endif %}
- <a href="{% url 'user-profile' room.host.id %}"><span>@{{room.host.username}}</span></a>
-<p>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></p>
-<small>{{room.topic.name}}</small>
+<div class="d-flex justify-content-between">
+  <div>
+    <a class="fs-5" href="{% url 'user-profile' room.host.id %}"><span>@{{room.host.username}}</span></a>
+    <p class="fs-4"><a href="{% url 'room' room.id %}">{{room.name}}</a></p>
+    <small>{{room.topic.name}}</small>
+  </div>
+
+  <div>
+    {% if request.user == room.host %}
+    <a href="{% url 'update-room' room.id %}">Edit</a>
+    <a href="{% url 'delete-room' room.id %}">Delete</a>
+    {% endif %}
+  </div>
+</div>
 <hr>
 {% endfor %}
