--- a/base/templates/base/topics_component.html
+++ b/base/templates/base/topics_component.html
@@ -1,10 +1,14 @@
 <h3>Browse Topics</h3>
 <hr>
-<div>
-  <a href="{% url 'home' %}">All</a>
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light">
+  <ul class="nav nav-pills flex-column mb-auto">
+    <li class="nav-item border border-primary">
+      <a class="nav-link" href="{% url 'home' %}">All</a>
+    </li>
+    {% for topic in topics %}
+    <li class="nav-item border border-primary">
+      <a class="nav-link" href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+    </li>
+    {% endfor %}
+  </ul>
 </div>
-{% for topic in topics %}
-<div>
-  <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
-</div>
-{% endfor %}
