--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -1,11 +1,40 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<div>
-  <form action="" method="POST">
+<div class="container mt-4">
+  <h1>Let's Create a Room!</h1>
+  <!-- <form action="" method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <button type="submit">Submit</button>
+  </form> -->
+  <form class="form mt-4" action="" method="POST">
+    {% csrf_token %}
+  
+    <div class="form__group mt-4">
+      <label for="room_topic">Enter a Topic : </label>
+      <input required type="text" value="{{ room.topic.name }}" name="topic" list="topic-list">
+      <datalist id="topic-list">
+        <select id="room_topic">
+          {% for topic in topics %}
+          <option value="{{ topic.name }}">{{ topic.name }}</option>
+          {% endfor %}
+        </select>
+      </datalist>
+    </div>
+    <div class="form__group mt-4">
+      <label for="room_name">Room Name : </label>
+      {{ form.name }}
+    </div>
+    <div class="form__group mt-4">
+      <label for="room_description">Room Description : </label>
+      {{ form.description }}
+    </div>
+  
+    <div class="form__action mt-4">
+      <a class="btn btn-danger" href="{% url 'home' %}">Cancel</a>
+      <button class="btn btn-success" type="submit">Submit</button>
+    </div>
   </form>
 </div>
 {% endblock %}
