--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -1,26 +1,22 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<style>
-  .profile-container {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-  }
-</style>
 
-
-<div class="profile-container">
-  <div>
-    {% include 'base/topics_component.html' %}
-  </div>
-  
-  <div>
-    <h1>{{user.username}}</h1>
-    {% include 'base/feed_component.html' %}
-  </div>
-
-  <div>
-    {% include 'base/activity_component.html' %}
+<div class="container-fluid">
+  <div class="row row-cols-4">
+    <div class="col-2 text-center">
+      {% include 'base/topics_component.html' %}
+    </div>
+    <div class="col-7">
+      <div class="text-center my-5">
+        <h1>{{user.username}}</h1>
+        <a href="">Edit</a>
+      </div>
+      {% include 'base/feed_component.html' %}
+    </div>
+    <div class="col-3">
+      {% include 'base/activity_component.html' %}
+    </div>
   </div>
 </div>
 {% endblock %}
