--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -11,7 +11,7 @@
   </div>
   <div>
     {% if request.user == message.user %}
-    <a href="{% url 'delete-message' message.id %}">Delete</a>
+    <a class="btn btn-danger" href="{% url 'delete-message' message.id %}">Delete</a>
     {% endif %}
   </div>
 </div>
