--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -8,8 +8,8 @@
 
   <div>
     {% if request.user == room.host %}
-    <a href="{% url 'update-room' room.id %}">Edit</a>
-    <a href="{% url 'delete-room' room.id %}">Delete</a>
+    <a class="btn btn-warning" href="{% url 'update-room' room.id %}">Edit</a>
+    <a class="btn btn-danger" href="{% url 'delete-room' room.id %}">Delete</a>
     {% endif %}
   </div>
 </div>
