--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -10,8 +10,9 @@
     <div class="col-7">
       <div class="text-center my-5">
         <h1>{{user.username}}</h1>
-        <a href="">Edit</a>
+        <a class="btn btn-warning" href="">Edit Profile</a>
       </div>
+      <h3>Rooms created by {{user.username}} : </h3>
       {% include 'base/feed_component.html' %}
     </div>
     <div class="col-3">
