--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,53 +1,54 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<style>
-  .room-container {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-  }
-</style>
 
-<div class="room-container">
-
-  <div>
-
-    <h1>{{room.name}}</h1>
+<div class="container-fluid mt-4">
+  <div class="row row-cols-4">
+    <div class="col-9">      
+      <h1>{{room.name}}</h1>
     
-    <p>{{room.description}}</p>
+      <h5 class="my-4">{{room.description}}</h5>
     
-    <div class="comment-wrapper">
-      <h3>Conversations</h3>
-      <hr>
-      {% for message in room_messages %}
-      <div>
-        {% if request.user == message.user %}
-        <a href="{% url 'delete-message' message.id %}">Delete</a>
-        {% endif %}
-        <small>{{message.user}}  {{message.created|timesince}} ago</small>
-        <p>{{message.body}}</p>
+      <div class="comment-wrapper">
+        <h3>Conversations</h3>
         <hr>
+        {% for message in room_messages %}
+        <div class="d-flex justify-content-between">
+          <div>
+            <p class="fs-6"><a href="{% url 'user-profile' message.user.id %}">@{{message.user}}</a> {{message.created|timesince}}
+              ago</p>
+            <br>
+            <p class="fs-5">{{message}}</p>
+          </div>
+          <div>
+            {% if request.user == message.user %}
+            <a class="btn btn-danger" href="{% url 'delete-message' message.id %}">Delete</a>
+            {% endif %}
+          </div>
+        </div>
+        <hr>
+        {% endfor %}
       </div>
+    
+      {% if request.user.is_authenticated %}
+      <div class="comment-form">
+        <form action="" method="POST">
+          {% csrf_token %}
+          <input type="text" name="body" placeholder="Write your message here...">
+          <button type="submit" class="btn btn-success">Send</button>
+        </form>
+      </div>
+      {% endif %}
+    </div>
+    <div class="col-3">
+      <h3>Participants</h3>
+      <hr>
+      {% for user in participants %}
+      <a href="{% url 'user-profile' user.id %}">
+        <p>{{user.username}}</p>
+      </a>
       {% endfor %}
     </div>
-    
-    {% if request.user.is_authenticated %}
-    <div class="comment-form">
-      <form action="" method="POST">
-        {% csrf_token %}
-        <input type="text" name="body" placeholder="Write your message here...">
-        <button type="submit">Send</button>
-      </form>
-    </div>
-  </div>
-
-  <div>
-    <h3>Participants</h3>
-    <hr>
-    {% for user in participants %}
-    <p>{{user.username}}</p>
-    {% endfor %}
   </div>
 </div>
-{% endif %}
 {% endblock %}
