modify delete form

--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -31,7 +31,7 @@
     </div>
   
     <div class="form__action mt-4">
-      <a class="btn btn-danger" href="{% url 'home' %}">Cancel</a>
+      <a class="btn btn-warning" href="{% url 'home' %}">Cancel</a>
       <button class="btn btn-success" type="submit">Submit</button>
     </div>
   </form>
