--- a/base/templates/base/delete.html
+++ b/base/templates/base/delete.html
@@ -1,12 +1,12 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<div>
+<div class="container mt-4">
   <form action="" method="POST">
     {% csrf_token %}
-    <p>Are you surre you want to delete "{{obj}}"?</p>
-    <a href="{{request.META.HTTP_REFERER}}">Back</a>
-    <button type="submit">Confirm</button>
+    <h3>Are you surre you want to delete "{{obj}}"?</h3>
+    <a class="btn btn-warning" href="{{request.META.HTTP_REFERER}}">Back</a>
+    <button type="submit" class="btn btn-success">Confirm</button>
   </form>
 </div>
 {% endblock %}
