--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -4,7 +4,7 @@
 {% for message in room_messages %}
 <div class="d-flex justify-content-between">
   <div>
-      <small><a href="{% url 'user-profile' message.user.id %}">@{{message.user}}</a> {{message.created|timesince}} ago</small>
+      <small><a href="{% url 'user-profile' message.user.id %}">@{{message.user.username}}</a> {{message.created|timesince}} ago</small>
       <br>
       <small>Replied to "{{message.room}}"</small>
       <p class="fs-5">{{message}}</p>
