--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
         <li class="nav-item dropdown">
           {% if request.user.is_authenticated %}
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Hello! {{request.user}}
+            Hello! {{request.user.username}}
           </a>
           {% else %}
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
