--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -10,7 +10,14 @@
     <div class="col-7">
       <div class="text-center my-5">
         <h1>{{user.username}}</h1>
-        <a class="btn btn-warning" href="">Edit Profile</a>
+        {% if user.bio %}
+        <p>{{user.bio}}</p>
+        {% else %}
+        <p>This person have'nt introduce himself/herself!</p>
+        {% endif %}
+        {% if request.user == user %}
+        <a class="btn btn-warning" href="{% url 'update-user' %}">Edit Profile</a>
+        {% endif %}
       </div>
       <h3>Rooms created by {{user.username}} : </h3>
       {% include 'base/feed_component.html' %}
